# simple-cli-agents

./: .gitignore  README.md  README_CN.md
docs/: PROJECT_DNA.md  README.md
docs/java-spring-ai/: 2026-07-12-implementation-plan.md  PROJECT_DNA.md
docs/python-langchain/: HANDOFF.md  PLAN.md  PROJECT_DNA.md
docs/python-langchain/superpowers/plans/: 2026-07-12-simple-cli-agent.md
docs/python-langchain/superpowers/specs/: 2026-07-12-simple-cli-agent-design.md
java-spring-ai/: .gitignore  README.md  START.md  pom.xml
java-spring-ai/src/main/java/com/example/simplecliagent/: SimpleCliAgentApplication.java
java-spring-ai/src/main/java/com/example/simplecliagent/cli/: ReplRunner.java
java-spring-ai/src/main/java/com/example/simplecliagent/config/: AiConfig.java  AppProperties.java  ConnectionDiagnostics.java
java-spring-ai/src/main/java/com/example/simplecliagent/observability/: HttpJsonlLogger.java  HttpLoggingInterceptor.java  LogicalTrace.java
java-spring-ai/src/main/java/com/example/simplecliagent/tools/: CommandGuard.java  FileTools.java  (+3 more)
java-spring-ai/src/main/resources/: application.yml  logback-spring.xml
python-langchain/: .env.example  .gitignore  README.md  START.md  pyproject.toml
python-langchain/simple_cli_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  http_logging.py  model.py  tracing.py
python-langchain/simple_cli_agent/tools/: __init__.py  agent_tools.py  files.py  shell.py
python-langchain/tests/: test_config.py  test_edit_file.py  test_files.py  test_grep.py  test_http_logging.py  test_shell_and_ls.py
(+4 files in other folders)
